= SMART COSMOS Gateway/Proxy Server Release Notes

== UNRELEASED

=== New Features

No new features are added in this release.

=== Bugfixes & Improvements

* PROFILES-667: add zipkin starter for distributed tracing

== Release 3.0.0 (August 12, 2016)

Initial release.