@@ -9,6 +9,7 @@ No new features are added in this release.
 === Bugfixes & Improvements
 
 * PROFILES-667: add zipkin starter for distributed tracing
+* PROFILES-740: Gateway service logs passwords in clear text
 
 == Release 3.0.0 (August 12, 2016)
 
